--- a/source/Reoria.Godot/Reoria.Godot.csproj
+++ b/source/Reoria.Godot/Reoria.Godot.csproj
@@ -5,4 +5,7 @@
     <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'ios' ">net8.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Reoria\Reoria.csproj" />
+  </ItemGroup>
 </Project>
