--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "assets"]
-	path = source/Reoria.Godot/assets
+	path = source/Reoria.Godot/Assets
 	url = https://github.com/XerShade/Reoria.Assets.git
