--- a/source/Reoria.Godot/Reoria.Godot.csproj
+++ b/source/Reoria.Godot/Reoria.Godot.csproj
@@ -55,4 +55,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Reoria\Reoria.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Nodes\Entities\Actors\Data\" />
+    <Folder Include="Nodes\Entities\Data\" />
+  </ItemGroup>
 </Project>
