Added Godot package references.

--- a/source/Reoria/Reoria.csproj
+++ b/source/Reoria/Reoria.csproj
@@ -58,4 +58,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Godot.SourceGenerators" Version="4.2.1" />
+    <PackageReference Include="GodotSharp" Version="4.2.1" />
+    <PackageReference Include="GodotSharpEditor" Version="4.2.1" />
+  </ItemGroup>
+
 </Project>
