--- a/source/Reoria.Godot/Reoria.Godot.csproj
+++ b/source/Reoria.Godot/Reoria.Godot.csproj
@@ -53,6 +53,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Reoria.Game\Reoria.Game.csproj" />
     <ProjectReference Include="..\Reoria\Reoria.csproj" />
   </ItemGroup>
 </Project>
